<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WelcomeScreen"
    android:background="?attr/welcomeColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="170dp"
            android:layout_height="65dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="tender"
            android:textColor="@color/just_white"
            android:textSize="55sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="176dp"
            android:layout_marginRight="176dp"
            android:src="@drawable/tinder_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            app:tint="@color/just_white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="Welcome to tender!"
            android:textColor="@color/just_white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <android.widget.Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="?attr/btnColor"
            android:fontFamily="@font/proxima_nova_regular"
            android:paddingVertical="15dp"
            android:text="@string/create_account"
            android:textColor="@color/tender_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <android.widget.Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/border_radius_white"
            android:fontFamily="@font/proxima_nova_bold"
            android:paddingVertical="15dp"
            android:text="LOG IN"
            android:textColor="@color/just_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:text="Can't login?"
            android:textSize="15dp"
            android:fontFamily="@font/proxima_nova_bold"
            android:textColor="@color/just_white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>